<resources>
    <string name="app_name">Texx</string>
    <string name="action_settings">Settings</string>
    <string name="action_bug_report">Report issue</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading...</string>

    <string name="welcome_text">Welcome to Texx.</string>
    <string name="connect_request_login">Let\'s Connect!</string>
    <string name="login_or_register_request">Please Login or Register Newly to Texx.</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_app_settings">App Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_title_dark_theme">Enable Dark theme</string>
    <string name="pref_description_dark_theme_on">Theme for nights or dark-theme lovers</string>
    <string name="pref_description_dark_theme_off">Theme for days or light-theme lovers</string>

    <!-- Strings related to bug reporting -->
    <string name="pref_title_username">Username</string>
    <string name="pref_default_username">John Doe</string>
    <string name="bug_report_title">Report an issue</string>
    <string name="bug_report_edit_title_hint">Title</string>
    <string name="bug_report_edit_description">Describe your issue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_post_compose_hint">What\'s happening?</string>

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>-->

</resources>
